# ChangeLog for games-board/awale
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/awale/ChangeLog,v 1.6 2013/07/07 10:18:12 ago Exp $

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> awale-1.5.ebuild:
  Stable for x86, wrt bug #469728

  18 May 2013; Chema Alonso <nimiux@gentoo.org> awale-1.5.ebuild:
  Stable for amd64 wrt bug #469728

  14 May 2013; Julian Ospald <hasufell@gentoo.org> awale-1.5.ebuild:
  we messed up, use right automake-version

  14 May 2013; Julian Ospald <hasufell@gentoo.org> awale-1.5.ebuild:
  remove all autotools stuff like autoreconf to fix bug #469796

  27 Jan 2013; Julian Ospald <hasufell@gentoo.org> awale-1.5.ebuild:
  make icon update depend on tk

*awale-1.5 (27 Jan 2013)

  27 Jan 2013; Julian Ospald <hasufell@gentoo.org> +awale-1.5.ebuild,
  +files/awale-1.5-build.patch, +metadata.xml:
  initial import wrt #344445