@@ -1,26 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX awale-1.5-build.patch 3315 SHA256 acf4a0e0d8c5822ac869711136f81377a2a10314dfbd988a27f3573c080b169d SHA512 d386dd95aaa1e2b21b7b23d684997b8758a263edabb757438d9254f44877d4881cf0e850825a1fb32cff5042a78eeb907f9c25f88db39ab1c748d73f619d8927 WHIRLPOOL 81d509dfa46a936aa6fb048db55f4fa05d2f8b8fc896cc35d53c5a00405890c9a2c261b2f7d607bf37342bfec8f88bfcf5ad03778ec86404faa40ddf616b4f6d
-DIST awale-1.5-no-autoreconf.patch.xz 25552 SHA256 01f8a2fdf7a0899ae4735d9eb4e0305405319e4e0db6a637e83281517862a5e7 SHA512 930e4983767c0c206575f608d2bf83e340244e0e38e8e1e65f3f4bfb8a0281729d8de9016a71ead925ab0ae6e52ba7ec6405e781bb9b3f0a685b22b0b5b52b7b WHIRLPOOL 938f065ea89c4e0d738576d4d8e27c92a7b5695a9e1eb3e4598e1aa58d7f3fed0c38d936c7053b621e35d70ca1a7fdd8f8a128955a90186aa018bfdeef9a02f2
+AUX awale-1.5-build.patch 3323 SHA256 019f6490c625349ccc24cfd52aa4975fe64aadc5ac217268bc5dc29fabc2f393 SHA512 7dccdb24469238d36d7ea0a9d9b27ca2e4b4472ae4918b0361f78e84933db1ebd948197af32c40ec48d014f3baefc4adf1e48f0e277af8b6b8b53e780c9c613e WHIRLPOOL d56164db2e0a086c6aa9cdb1a59fec2000f103a2d7b1ed5d89bc711b0a8ff2efa9ebefc0529faf16bc87834a376a1d2a95db65d97d9e1b503dc348cf86ef3db1
+DIST awale-1.5-no-autoreconf2.patch.xz 37268 SHA256 239a8a1a0540353d701783f3163b921e38cf0965b461f695e3e3724869e1837e SHA512 857814c6ffe828bb0c3b82c214932ddf95162b7abaac6720db987f2af31a3b144543773a607edc70e0fceb8433f2aa519d3cfaca7474750cb45074aef0c37cb1 WHIRLPOOL f278edd456a702dc05f01bdec483fe634f0e09469595664aa5e22b8892ea4508dbd797c81dd9c9473ac46e2e028540a157bb91c66f72fe9dfffa0692295fe902
 DIST awale-1.5.tar.gz 489357 SHA256 8bf9812fd6cfe142e18a35474f6a366c1b12f960863a33421f6d2e448ed47014 SHA512 b3f33068d7d6cfd964051e15cfd84e7f2c8483c30f2ccea35e2dddb34353ea984561fdf28c0d668404d80cda89c6d5fcd0004a1a86d92325e5f6fc2f88197c61 WHIRLPOOL 05b46f8f8ea89236aa30755f4d6f39daa24135421220f35e4c96f919facb138871735ebe5f1741e29f4a2fc6572381ad2aa0768197112c22eaf961b0d9814792
-EBUILD awale-1.5.ebuild 1589 SHA256 18439f89029b27e27196caa00d1de53be9bceb248e2f84896c4f92ba7fb5d9e1 SHA512 ecd3dbf587a3a87068eb5e4ad0bfbbb4af8296a6cdbd3c3db9da0e2fe34ebf6943e182dd4b6ffcdd9779b385918741e6949f00f9b90b2649f2ca2993a1195875 WHIRLPOOL fa633930a62abe06467f8806ed82e0d95ea4586f4674e509c3138c229637e07c2779f073ab3e1e28668c3ab28425794931920bf6ec8720c135322619741f535e
-MISC ChangeLog 929 SHA256 d076ab0136cc3e61d834ba77dadf9434c3151bb1adf305291ff40d536d3cdab7 SHA512 5d29eb485c45f021501a1ffad753cc289b0f726f0e52a60f8f3dfe72e50d14f2e88f533dcf413101d616201547a01b65b95378b0941d1fce84d170a96e5e8ec0 WHIRLPOOL 0f097453f010595413513cbd2e2ea1016dccc0834ff0ff0ce656d57b6e8aff0a0f19e7093933297d24af03b44810d7e89ae202d1db647339d5c686b3953c78ca
+EBUILD awale-1.5.ebuild 1596 SHA256 6b1fb12225fdaf2b74b94a976d807ae70b4f337ac3e54ac0f8ac60485aa95a81 SHA512 4112c29ca15f9dceed1f9a6df84aac1530e6df2c4ae006c92b5b163eea17468ee4410ed605bd5e173c01b33c661a139fc1cc145d0ffd4a31e6f7f59238b89749 WHIRLPOOL 6645e7945bb2ad89c61863ec8b3156b1e2df13d369e5d09c82fee6dc1e0384eae34831e0468f48db046b1897f18377ed34857a71c8c8b36375a43cda08e250e3
+MISC ChangeLog 1121 SHA256 e509fe53b06be85b84fe9a19101a04e21f5d8f088f36755ed5b0325a9280bcf4 SHA512 615fc7a3724dbc2ceb498eb4d9a43bac048526ad7cc16c29fec096c866f7b82843d325ff84c9c68fe52615f9a5ca565d0eef481233b879107f201e41989424d3 WHIRLPOOL 0ff27aca308116b0dcd0bf47fe47a43acec2b63e96ce1381cb40094cfdc951a44c0865763ac109e52430e83075c9a0b7882f0707df7a7fcfcb0d2920940b7462
 MISC metadata.xml 255 SHA256 8ce125b1cb2a8da5fe808223ae6ed60fe03598c692e5020f0a8aaee09b5d6ca3 SHA512 29f4a4a15fc968a3151c449354cd2003831f4b66b57d72222c46d4e4f7ff0586ed3f0b76d09fadf0b43fbb3a46951b19207dd6d38b79fe394b61694cd272ad95 WHIRLPOOL 373afc42b6a5f9f473397b1b95b73377110a2d7cf3590bdb8e0ef4b58c9628a06b1af46db726416fbaad0c29b91ee1eb631eccac14a26be994b705a43f097db8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR2UBeAAoJELp701BxlEWfFIUP/2SiLfypUpAo745PcgWxhCPK
-Pqvp9i0CotG/lzxwrsMaGdGcmN1hTcHPJCgqUq4SuJv4s8Fbi/dIKHFQSjMnj1no
-fM+xyz433D4uZybHZxwiWiTmUM820/zSbr9vLrsoT4IY3ow26HUA0B5US9Y9TQvt
-52VDzk+JJ/96F6GxLFGSBdR2hIgJVvMb7GMwQGhZe/sRP+Eyw8HSGYVtM6cc9+Qf
-81vl0qcv+SJ11W2kDpc+Uzb2bJJKordGRIsBLVzF2E5R6KDzqw+vRoizkOd9eTI8
-FCYw0ogUMUqugiaZZdTcb0IlMciYbgE6usXxhChFNv228YOv2ZXRRu6rH2fh9T5P
-JUGBvvSLfY4gz8156UBXbdQsRALJ5J2MzP1MjnqZPT4JgRwWEIwfostYeui85VPC
-NMU8rKlc4Q3MzOzRGlfgQfsriD0gksaDlDXFtSI4dZV5YuHKsLDrHv9Ll5BLAsYV
-8r+fMBaDq33NvGmCFIepTjO0Fwg6+L0+kXP24V/kpmKBsnbl0C4O4Nr63nhGyBii
-bW0DIYDtHvGOUK5eOyn5htIETPy5lYq2Vyx6DmVQVWu4PIiPpyB6zDueJWRFuDQo
-pFU/If8geYwL+dokir22e9AgRapKi//Q45jJIEvJfxGwN1KRsy+47VK/9I5vKjbQ
-+RfeSySDd2iUNWzk6Zmc
-=kbQw
+iQEcBAEBCAAGBQJSKmXnAAoJEFpvPKfnPDWzEyUH+wRNT44dHmosKkWmvGZF0hqU
+buAEUNwpJmAwLOaBKa6JAdvmKwnBBHGXhIHa77gk+pbkusnlET3kNaJCdLipOmUD
+NuvN7vm73SovM3lLUMB5zAzPF5xaLtO7TNjCuFPOJhbP0hjSywPmiAabF0mEsmuq
+4edMythEgyBKKAt6zCgxytv++mq1b4sLzc+BIK4BMZbf2aR+XinDxqcNJVi8lIKn
+xNdu9Op75vwIrKVsntfk6bFwT1OaaZaOHtJw0q1boMn9twDWKNG760m1wTjDUAIX
+RqxHaDNDbgH4hzfi+MHvUt4uW1Fc3r6FP90uYePP12F7bYeMFHq/Ifdxis20GTU=
+=OJTR
 -----END PGP SIGNATURE-----
