@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/awale/awale-1.5.ebuild,v 1.6 2013/07/07 10:18:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/awale/awale-1.5.ebuild,v 1.7 2013/09/06 23:31:43 hasufell Exp $
 
 # do not use autotools related stuff in stable ebuilds
 # unless you like random breakage: 469796, 469798, 424041
@@ -12,7 +12,7 @@ inherit eutils gnome2-utils games # STABLE ARCH
 DESCRIPTION="Free Awale - The game of all Africa"
 HOMEPAGE="http://www.nongnu.org/awale/"
 SRC_URI="mirror://nongnu/awale/${P}.tar.gz"
-SRC_URI="${SRC_URI} http://dev.gentoo.org/~hasufell/distfiles/${P}-no-autoreconf.patch.xz" # STABLE ARCH
+SRC_URI="${SRC_URI} http://dev.gentoo.org/~hasufell/distfiles/${P}-no-autoreconf2.patch.xz" # STABLE ARCH
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -23,7 +23,7 @@ RDEPEND="tk? ( dev-lang/tcl dev-lang/tk )"
 
 src_prepare() {
 	epatch "${FILESDIR}"/${P}-build.patch
-	epatch "${DISTDIR}"/${P}-no-autoreconf.patch.xz # STABLE ARCH
+	epatch "${DISTDIR}"/${P}-no-autoreconf2.patch.xz # STABLE ARCH
 
 	mv src/xawale.tcl src/xawale.tcl.in || die
 #	mv configure.in configure.ac || die # UNSTABLE ARCH
