@@ -8,6 +8,6 @@ KEYWORDS=amd64 x86
 LICENSE=GPL-2
 RDEPEND=tk? ( dev-lang/tcl dev-lang/tk )
 SLOT=0
-SRC_URI=mirror://nongnu/awale/awale-1.5.tar.gz http://dev.gentoo.org/~hasufell/distfiles/awale-1.5-no-autoreconf.patch.xz
+SRC_URI=mirror://nongnu/awale/awale-1.5.tar.gz http://dev.gentoo.org/~hasufell/distfiles/awale-1.5-no-autoreconf2.patch.xz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	games	0fb7637597e0869f6c8be79b11d0135a	gnome2-utils	cf14abfc65f26151fd2e33d722422ee3	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=46e3de56f3d055089cb47d112ca722fb
+_md5_=80395a0f6159f9e721f99410dab320e6
