@@ -1,6 +1,11 @@
 # ChangeLog for games-board/awale
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/awale/ChangeLog,v 1.6 2013/07/07 10:18:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/awale/ChangeLog,v 1.7 2013/09/06 23:31:43 hasufell Exp $
+
+  06 Sep 2013; Julian Ospald <hasufell@gentoo.org> awale-1.5.ebuild,
+  files/awale-1.5-build.patch:
+  don't expand path variables in configure.in, thanks to vapier for pointing it
+  out
 
   07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> awale-1.5.ebuild:
   Stable for x86, wrt bug #469728
